<resources>
    <string name="app_name">Projet_Petite_anonce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bj">Bonjour!</string>
    <string name="pseudo">Pseudo</string>
    <string name="mail">Adresse mail</string>
    <string name="phrase_inscription"><u>Vous n\'avez pas encore de compte ? <b>S\'incrire</b></u> </string>
    <string name="phrase_mp_oublier"><u>Mot de passe oublié ? </u></string>
    <string name="inscription">S\'inscrire </string>
    <string name="connexion">Se connecter</string>
    <string name="mdp">Mot de passe</string>
    <string name="pa">Petite Anonce</string>
    <string name="favorie">Favoris</string>
    <string name="filtre">Filtres</string>
    <string name="anonce">Mes Annonces</string>
    <string name="message">Mes Messages</string>

    <string name="tel">Numéro de téléphone</string>
    <string name="Pmail">Par mail</string>
    <string name="Ptel">Par téléphone</string>
    <string name="contact_vendeur">Comment voulez-vous contactez le vendeur?</string>

    <string name="accueil">Accueil</string>
    <string name="ajout">Ajout</string>
    <string name="compte">Compte</string>

    <string name="titreAdd">Déposer votre annonce</string>
    <string name="titreEnonce">Quel est le titre de l\'annonce ?</string>
    <string name="typeEnonce">Quel est le type de votre bien :</string>
    <string name="etatEnonce">Identifiez l\'état de votre bien :</string>
    <string name="neuf">Neuf</string>
    <string name="tresbon">Très bon état</string>
    <string name="bon">Bon état</string>
    <string name="satif">Satisfaisant</string>
    <string name="descriptionEnonce">Description du bien :</string>
    <string name="titre">Titre</string>
    <string name="categorie">Choisir la catégorie</string>
    <string name="descriptionExemple">Une belle description avec 500 caractères maximum :)</string>
    <string name="prixEnonce">Renseignez le prix du bien :</string>
    <string name="prix">Prix en €</string>
    <string name="localisationEnonce">Renseignez la localisation du bien :</string>
    <string name="localisationExemple">Adresse, ville ou code postal</string>
    <string name="valider">Valider</string>
    <string name="contacter">Contacter</string>
    <string name="details">Détails</string>
    <string name="etat">Etat</string>
    <string name="partager">Partager</string>
    <string name="signaler">Signaler</string>
    <string name="favories">Favories</string>
    <string name="date">Aujourd\'hui à 13:45</string>
    <string name="testNbImage">1/2</string>
    <string name="type">Type</string>
    <string-array name="categorie">
        <item>Livres</item>
        <item>Décoration</item>
        <item>Véhicule</item>
        <item>Musique</item>
        <item>Immobilier</item>
        <item>Multimédia</item>
    </string-array>
    <string name="localiser">Localiser l\'annonce</string>
    <string name="telRequis">Numéro de téléphone requis !</string>
    <string name="sup">Supprimez !</string>
    <string name="bienvenu">Bienvenue</string>
    <string name="annonce">Annonces</string>
    <string name="avis">Avis</string>
    <string name="modif">Modifier mon profil</string>
    <string name="mesannonces">Mes annonces</string>
    <string name="notif">Notification</string>
    <string name="aide">Aide, FAQ, CGU</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="imageProfil">Image du profil</string>
    <string name="revert">Revenir en arrière</string>
    <string name="particulier">Particulier</string>
    <string name="suppression">Etes vous sûre de vouloir supprimer cette articles de votre liste? </string>
    <string name="suppressionMessage">Etes vous sûre de vouloir supprimer cette conversation? </string>
    <string name="requisEmail">Email requis !</string>
    <string name="requisMDP">Mot de passe requis !</string>
    <string name="requisPseudo">Pseudo requis !</string>
    <string name="requisTitle">Titre requis !</string>
    <string name="requisLocalisation">Localisation requise !</string>
    <string name="requisPrice"> Prix requis !</string>
    <string name="requisDescription">Description requise !</string>
    <string name="requisType">Type requis ! </string>
    <string name="categorieTitre">Catégorie</string>
    <string name="professionel">Professionnel</string>
    <string name="siret">SIRET</string>
    <string name="nom_societe">Nom de société</string>
    <string name="supp">Supprimer</string>
    <string name="requisSiret">SIRET requis!</string>
    <string name="requisSociete">Nom de société requis !</string>
    <string name="statistique">Statistique</string>
    <string name="supp_annonce">Supprimer l\'annonce</string>
    <string name="modif_annonce">Modifier l\'annonce</string>

    <string name="oui">Oui</string>
    <string name="non">Non</string>

    <string name="remplirTousLesChamps">Veuillez remplir tous les champs svp</string>
    <string name="incorrect">L\'adresse mail et/ou le mot de passe est incorrect</string>
    <string name="connexionrequise">Il faut d\'abord se connecter (ou se créer un compte) :</string>
    <string name="reinitialiser">Réinitialiser</string>
    <string name="rechercher">Rechercher</string>
    <string name="emptyAdvert">Il n\' y a aucune annonce de disponible.</string>
</resources>
