<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/accueil"
        android:visible="true"
        />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_baseline_grade_24"
        android:title="@string/favorie"
        android:visible="true"
       />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/ajout"
        android:visible="true"
        />


    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/compte"
        android:visible="true"
       />

</menu>