<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/petite_anonce_logo"
    android:orientation="vertical"
    android:paddingStart="8dp"
    tools:context=".AddFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="150dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/bienvenu"
        android:textColor="@color/noir_transparent"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_pseudo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="40dp"
        android:background="@drawable/edittext"
        android:drawablePadding="4dp"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/pseudo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editText_tel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="125dp"
        android:background="@drawable/edittext"
        android:drawablePadding="4dp"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/tel"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editText2_mail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:drawablePadding="4dp"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editText2_mdp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="70dp"
        android:background="@drawable/edittext"
        android:drawablePadding="4dp"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/mdp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        android:password="true" />


    <Button
        android:id="@+id/btn_inscription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/saumon"
        android:text="@string/inscription"
        app:cornerRadius="50dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:minHeight="48dp"
        android:text="@string/professionel" />

</FrameLayout>